# search

./: .gitignore  README.md  github.py  ingest.ipynb  pyproject.toml  requirements.txt  sandbox.py  search.ipynb  to_bronze.py  to_gold.py  to_silver.py
scripts/: setup
