[tool.poetry]
name = "search"
version = "0.1.0"
description = ""
authors = ["Tobias Oberrauch <tobias.oberrauch@pioneers.ai>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
asttokens = "2.4.1"
certifi = "2023.11.17"
cffi = "1.16.0"
chardet = "4.0.0"
charset-normalizer = "3.3.2"
click = "8.1.7"
colorama = "0.4.6"
comm = "0.2.0"
coqpit = "0.0.9"
debugpy = "1.8.0"
decorator = "4.4.2"
exceptiongroup = "1.2.0"
executing = "2.0.1"
filelock = "3.13.1"
flask = "2.0.1"
flask-cors = "3.0.10"
flask-socketio = "4.3.2"
fsspec = "2023.10.0"
idna = "2.10"
imageio = "2.33.0"
imageio-ffmpeg = "0.4.9"
ipykernel = "6.27.0"
ipython = "8.18.0"
itsdangerous = "2.1.2"
jedi = "0.19.1"
jinja2 = "3.0.1"
jupyter-client = "8.6.0"
jupyter-core = "5.5.0"
llvmlite = "0.41.1"
markupsafe = "2.1.3"
matplotlib-inline = "0.1.6"
more-itertools = "10.1.0"
moviepy = "1.0.3"
mpmath = "1.3.0"
nest-asyncio = "1.5.8"
networkx = "3.2.1"
numba = "0.58.1"
numpy = "1.26.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
