[tool.poetry]
name = "search"
version = "0.1.0"
description = ""
authors = ["Tobias Oberrauch <tobias.oberrauch@pioneers.ai>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
asttokens = "2.4.1"
certifi = "2023.11.17"
cffi = "1.16.0"
chardet = "4.0.0"
charset-normalizer = "3.3.2"
click = "8.1.7"
colorama = "0.4.6"
comm = "0.2.0"
coqpit = "0.0.9"
debugpy = "1.8.0"
decorator = "4.4.2"
exceptiongroup = "1.2.0"
executing = "2.0.1"
filelock = "3.13.1"
flask = "2.0.1"
flask-cors = "3.0.10"
flask-socketio = "4.3.2"
fsspec = "2023.10.0"
idna = "2.10"
imageio = "2.33.0"
imageio-ffmpeg = "0.4.9"
ipykernel = "6.27.0"
ipython = "8.18.0"
itsdangerous = "2.1.2"
jedi = "0.19.1"
jinja2 = "3.0.1"
jupyter-client = "8.6.0"
jupyter-core = "5.5.0"
llvmlite = "0.41.1"
markupsafe = "2.1.3"
matplotlib-inline = "0.1.6"
more-itertools = "10.1.0"
moviepy = "1.0.3"
mpmath = "1.3.0"
nest-asyncio = "1.5.8"
networkx = "3.2.1"
numba = "0.58.1"
numpy = "1.26.2"
packaging = "23.2"
parso = "0.8.3"
pillow = "10.1.0"
platformdirs = "4.0.0"
proglog = "0.1.10"
prompt-toolkit = "3.0.41"
psutil = "5.9.6"
pure-eval = "0.2.2"
pycparser = "2.21"
pygments = "2.17.2"
python-dateutil = "2.8.2"
python-engineio = "3.14.2"
python-socketio = "4.6.1"
pytube = "15.0.0"
pywin32 = "306"
pyxdg = "0.27"
pyzmq = "25.1.1"
regex = "2023.10.3"
requests = "2.31.0"
six = "1.16.0"
srt = "3.5.3"
stack-data = "0.6.3"
sympy = "1.12"
tiktoken = "0.5.1"
torch = "2.1.1"
tornado = "6.3.3"
tqdm = "4.66.1"
traitlets = "5.13.0"
typing-extensions = "4.8.0"
urllib3 = "1.26.18"
vosk = "0.3.45"
wcwidth = "0.2.12"
webrtcvad = "2.0.10"
websockets = "12.0"
werkzeug = "2.0.3"
azure-keyvault-keys = "4.8.0b2"
azure-keyvault-secrets = "4.7.0"
azure-loganalytics = "0.1.1"
azure-mgmt-advisor = "9.0.0"
azure-mgmt-apimanagement = "4.0.0"
azure-mgmt-appconfiguration = "3.0.0"
azure-mgmt-appcontainers = "2.0.0"
azure-mgmt-applicationinsights = "1.0.0"
azure-mgmt-authorization = "3.0.0"
azure-mgmt-batch = "17.0.0"
azure-mgmt-batchai = "7.0.0b1"
azure-mgmt-billing = "6.0.0"
azure-mgmt-botservice = "2.0.0"
azure-mgmt-cdn = "12.0.0"
azure-mgmt-cognitiveservices = "13.3.0"
azure-mgmt-compute = "29.1.0"
azure-mgmt-consumption = "2.0.0"
azure-mgmt-containerinstance = "10.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
